Made Schedule function and added text entries to others
Schedule is fully functional, made other minor updates throughout.

--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
 <body>
   <div id = "Schedule">
     <p>Schedule</p><br>
+    <div id="updSched"></div>
+    <script src="showTasks.js"></script>
+
     <label for="sched" class = "newtask">Add  </label>
-    <input type = "text" id = "sched">
+    <input type = "text" id = "sched"> <button type="submit" id = "button1">Enter</button>
+    <script src="gatherTasks.js"></script>
   </div>
+
   <div id = "ToDoList">
     <p>To-Do</p><br>
     <label for="do" class = "newtask">Add  </label>
-    <input type = "text" id = "do">
+    <input type = "text" id = "do"> <button type="submit" id = "button2">Enter</button>
+    <script src="gatherToDo.js"></script>
   </div>
+
   <div id = "Daily">
     <p>Daily</p><br>
     <label for="habit" class = "newtask">Add  </label>
-    <input type = "text" id = "habit">
+    <input type = "text" id = "habit"> <button type="submit" id = "button3">Enter</button>
+    <script src="gatherDailyHabits.js"></script>
   </div>
+
 </body>
